src/test/ui/traits/trait-object-vs-lifetime.stderr
error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-vs-lifetime.rs:9:23
   |
LL |     let _: S<'static, dyn 'static +>;
   |                       ^^^^^^^^^^^^^

error[E0107]: wrong number of lifetime arguments: expected 1, found 2
  --> $DIR/trait-object-vs-lifetime.rs:11:23
   |
LL |     let _: S<'static, 'static>;
   |                       ^^^^^^^ unexpected lifetime argument

error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/trait-object-vs-lifetime.rs:11:12
   |
LL |     let _: S<'static, 'static>;
   |            ^^^^^^^^^^^^^^^^^^^ expected 1 type argument

error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-vs-lifetime.rs:14:14
   |
LL |     let _: S<dyn 'static +, 'static>;
   |              ^^^^^^^^^^^^^

error[E0747]: type provided when a lifetime was expected
  --> $DIR/trait-object-vs-lifetime.rs:14:14
   |
LL |     let _: S<dyn 'static +, 'static>;
   |              ^^^^^^^^^^^^^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0107, E0224, E0747.
For more information about an error, try `rustc --explain E0107`.
